--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="styles.css" />
+		<link rel="icon" href="./favicon.ico" />
 		<title>Document</title>
 	</head>
 	<body>
